// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query tests query "* | count()"; switch to whole space 1`] = `
Array [
  "count",
  "961",
]
`;

exports[`Query tests query "* | count()"; switch to whole space 2`] = `
Array [
  "count",
  "1,031,672",
]
`;

exports[`Query tests query "_path=http | count() by id.resp_p | sort" 1`] = `
Array [
  "id.resp_p",
  "count",
  "8080",
  "6",
  "80",
  "55",
]
`;

exports[`Query tests query "_path=http | count()" 1`] = `
Array [
  "count",
  "61",
]
`;

exports[`Query tests query "_path=http | every 5m count()" 1`] = `
Array [
  "ts",
  "count",
  "04/13/1509:3000.0000",
  "55",
  "04/13/1509:2500.0000",
  "2",
  "04/13/1509:1000.0000",
  "2",
  "04/13/1509:0500.0000",
  "2",
]
`;

exports[`Query tests query "_path=weird | sort" 1`] = `
Array [
  "ts",
  "_path",
  "uid",
  "id.orig_h",
  "id.orig_p",
  "id.resp_h",
  "id.resp_p",
  "name",
  "addl",
  "notice",
  "peer",
  "04/13/1509:3127.8210",
  "weird",
  "CbtgYm2YYGmfYsyaC4",
  "192.168.0.54",
  "53147",
  "216.58.209.134",
  "80",
  "inflate_failed",
  "-",
  "F",
  "bro",
  "04/13/1509:3151.9870",
  "weird",
  "-",
  "-",
  "-",
  "-",
  "-",
  "unknown_protocol_2",
  "-",
  "F",
  "bro",
  "04/13/1509:3245.1220",
  "weird",
  "Ctd0Gv1XC3Z0UV1iX",
  "192.168.0.53",
  "3682",
  "192.168.0.1",
  "8080",
  "unknown_HTTP_method",
  "UNSUBSCRIBE",
  "F",
  "bro",
  "04/13/1509:3245.1400",
  "weird",
  "CZehjU3zE0mxEXiC41",
  "192.168.0.53",
  "3683",
  "192.168.0.1",
  "8080",
  "unknown_HTTP_method",
  "UNSUBSCRIBE",
  "F",
  "bro",
]
`;

exports[`Query tests query "_path=x509 | every 1d count() by certificate.version | sort ts, certification.version" 1`] = `
Array [
  "ts",
  "certificate.version",
  "count",
  "03/05/1500:0000.0000",
  "3",
  "18",
  "03/06/1500:0000.0000",
  "3",
  "281",
  "03/07/1500:0000.0000",
  "3",
  "324",
  "03/08/1500:0000.0000",
  "3",
  "321",
  "03/09/1500:0000.0000",
  "3",
  "691",
  "03/10/1500:0000.0000",
  "3",
  "821",
  "03/11/1500:0000.0000",
  "3",
  "722",
  "03/12/1500:0000.0000",
  "3",
  "676",
  "03/13/1500:0000.0000",
  "3",
  "603",
  "03/14/1500:0000.0000",
  "3",
  "111",
  "03/15/1500:0000.0000",
  "3",
  "117",
  "03/16/1500:0000.0000",
  "3",
  "277",
  "03/17/1500:0000.0000",
  "3",
  "461",
  "03/18/1500:0000.0000",
  "3",
  "128",
  "03/19/1500:0000.0000",
  "3",
  "748",
  "03/20/1500:0000.0000",
  "3",
  "651",
  "03/21/1500:0000.0000",
  "3",
  "237",
  "03/22/1500:0000.0000",
  "3",
  "210",
  "03/23/1500:0000.0000",
  "3",
  "222",
  "03/24/1500:0000.0000",
  "3",
  "203",
  "03/25/1500:0000.0000",
  "3",
  "202",
  "03/26/1500:0000.0000",
  "3",
  "235",
  "03/27/1500:0000.0000",
  "3",
  "213",
  "03/28/1500:0000.0000",
  "3",
  "208",
  "03/29/1500:0000.0000",
  "3",
  "218",
  "03/30/1500:0000.0000",
  "3",
  "206",
  "03/31/1500:0000.0000",
  "3",
  "223",
  "04/01/1500:0000.0000",
  "3",
  "214",
  "04/02/1500:0000.0000",
  "3",
  "221",
  "04/03/1500:0000.0000",
  "3",
  "219",
  "04/04/1500:0000.0000",
  "3",
  "214",
  "04/05/1500:0000.0000",
  "3",
  "219",
  "04/06/1500:0000.0000",
  "3",
  "206",
  "04/07/1500:0000.0000",
  "3",
  "892",
  "04/08/1500:0000.0000",
  "3",
  "736",
  "04/09/1500:0000.0000",
  "3",
  "419",
  "04/10/1500:0000.0000",
  "3",
  "216",
  "04/11/1500:0000.0000",
  "3",
  "250",
  "04/12/1500:0000.0000",
  "3",
  "240",
  "04/13/1500:0000.0000",
  "3",
  "135",
]
`;
